# StorageIdol-core

./: CLAUDE.md  README.md  package.json  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.claude/: CLAUDE.md
.claude/agents/: build-mcp.md  generate-templates.md  provision-client.md  simulate-conversation.md
.claude/skills/: build-mcp  deploy  new-client  simulate
apps/agents/: README.md
apps/api/: README.md
apps/backoffice/: README.md
apps/dashboard/: README.md
apps/mcps/: README.md
clients/: README.md  index.md
clients/_template/: config.yaml  decisions.md  profile.md
clients/redtras/: profile.md
context/: index.md
context/architecture/: core-vs-config.md  overview.md  runtime-fundamentals.md  tech-stack.md
context/company/: business-model.md  market-problems.md  mission.md  products.md
core/: CLAUDE.md
core/agents/: README.md  pyproject.toml
core/agents/modules/: README.md
core/agents/storageidol_agents/: __init__.py  judge.py  state.py  tasks.py
core/agents/storageidol_agents/graphs/: _base.py  registry.py
core/agents/storageidol_agents/modules/: __init__.py
core/agents/storageidol_agents/modules/auth/: phone_dni.py
core/agents/storageidol_agents/modules/channel/: formatter.py  prompt_adapter.py
core/agents/storageidol_agents/modules/conversation/: crm_lookup.py  faq_rag.py
core/agents/storageidol_agents/modules/debt/: hard.py  soft.py
core/agents/storageidol_agents/modules/escalation/: human_handoff.py
core/agents/storageidol_agents/modules/intent/: generic.py  storage.py
core/agents/storageidol_agents/modules/lead/: qualify_storage.py
core/agents/tests/golden/: README.md
infrastructure/: README.md
ops/: CLAUDE.md  README.md
scripts/: README.md  build-image.sh  provision-client.sh  provision-vps.sh
(+29 files in other folders)
