[project]
name = "storageidol-agents"
version = "0.1.0"
description = "LangGraph multi-agent system — composable modules + Celery worker"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-anthropic>=0.2",
    "celery>=5.3",
    "redis>=5.0",
    "pyyaml>=6.0",
    "python-ulid>=2.0",
    "storageidol-db",
    "storageidol-llm",
    "storageidol-whatsapp",
    "storageidol-voice",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
